<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="splash_text">Your toolkit to help homeless people</string>
    <string name="app_name" translatable="false">Street Care</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Street Care</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="donation_details">To be able to keep offering chapter membership without charging (as we do) and helping people as much as possible, we need support from everyone able to donate!
        \n\n&#8226;If you can donate $10, it will cover the minimum cost of your chapter membership for a year.
        \n&#8226;Donating $20 will cover your membership and support a member in need.
        \n&#8226;Donating $200 will cover your membership, support a member in need, and fund assistance for 25 homeless people during two Street Care days of action.
        \n&#8226;Please click here to <a href="https://www.example.com">donate</a>, if you join our Giving Program we will send you free gifts! (https://streetcare.us/join-giving-program/)
        \n\nThank you! \n\nFor any assistance with filling out the form or any other additional support, please email us at:info@streetcare.us</string>
    <string name="chaptermembership_introduction">
    <![CDATA[Street Care members work to help homeless people and are passionate about serving the community. Street Care is an initiative of <a href="https://brightmindenrichment.org/">Bright Mind</a>, an award-winning 501(3) nonprofit organization.<br><br>
    We want you to help us continue to reach even more people in need! You and your friends can significantly impact your community by being a part of the team.<br><br>
    Click here to find out what <a href="https://street_care_website_media_images.storage.googleapis.com/wp-content/uploads/2024/07/30201929/chapter_membership_entails_sc.pdf">chapter membership</a> entails.<br><br>
    If you prefer to sign and send in a copy or save it for later reference, please download the form <a href="https://street_care_website_media_images.storage.googleapis.com/wp-content/uploads/2024/07/30202242/Full-Chapter-Form.pdf">here</a>.
    ]]></string>
    <string name="howtohelp_toolkit_to_help">Your toolkit to support homeless people</string>
    <string name="how_to_help_toolkit_desc">Street Care is brought to you by homelessness care experts, to share tools that will enable you to provide transformative help to homeless families and individuals.</string>
    <string name="howtohelp_hot_to_help">How to Help</string>
    <string name="howtohelp_start_now">Start Now</string>
    <string name="start_now_desc">The essential steps of helping the homeless people at every stage of outreach.</string>
    <string name="hottohelp_how_to_videos">How-to Videos</string>
    <string name="howtohelp_what_to_bring">What to Bring and Give</string>
    <string name="donate">Donate</string>
    <string name="before">Before outreach</string>
    <string name="before_desc">Homeless people are a diverse group of individuals just like everyone else, no matter their appearance, gender, age, or race.</string>
    <string name="before_desc_2">Some have fallen on hard times. Some may be struggling with mental illness. But everyone wants to be treated with respect and dignity.</string>
    <string name="before_desc_3"> Here are some steps to follow before outreach:</string>
    <string name="let_someone_know">Let someone know</string>
    <string name="how_to_prepare">How to prepare your care bags</string>
    <string name="must_carry">Must carry</string>
    <string name="plan_an_intro">Plan an introduction</string>
    <string name="para1_before_page">The first thing to remember is that homeless people are a diverse group of people just like everyone else, no matter how they look, no matter their gender, age, or race. Some have fallen on hard times. Some may be struggling with mental illness. But everyone wants to be treated with respect and dignity. Here are some steps to follow before you go:</string>
    <string name="on_the_street">During outreach</string>
    <string name="after">After outreach</string>
    <string name="featured_items">Featured Items</string>
    <string name="healthy_snacks">Healthy Snacks</string>
    <string name="water">Water</string>
    <string name="first_aid">First Aid</string>
    <string name="personal_hygiene">Personal Hygiene</string>
    <string name="sock_clothing">Socks and Clothing</string>
    <string name="feminine_hygiene">Feminine Hygiene</string>
    <string name="healthy_snacks_details">Nonperishable and nutritious snacks such as nuts, pretzels, breakfast bars, applesauce, and dried fruit are best. Try to include items that are easy to chew for individuals without access to dental care. Remember to pack food items separately from any scented sanitary products.</string>
    <string name="water_details">Finding potable water can be difficult for homeless people. Bottled water is a great donation item, as is carrying a jug and cups.</string>
    <string name="first_aid_details">Infection prevention and first aid care are essential, especially for homeless people. Provide sealed, clean items such as bandages, wipes, ointments, and nail care kits to protect those in need. Avoid alcohol-based products.</string>
    <string name="personal_hygiene_details">Soaps should be fragrance-free, as sensitivities and allergies are common. Ensure hand sanitizers do not contain alcohol. Toothpaste and toothbrushes make practical and useful donation items.</string>
    <string name="sock_clothing_details">Clothing items are essential throughout all seasons, particularly warm clothes. Socks are especially crucial; they are affordable, easy to find, and overall great items to include.</string>
    <string name="feminine_hygiene_details">Tampons and pads are necessities, yet something that many families experiencing homelessness struggle to obtain every month. Consider different needs, such as heavy, moderate, and light flow.</string>
    <string name="android_app">How to use Street Care App</string>
    <string name="intro_to_street_outreach">An Introduction to Street Outreach</string>
    <string name="homeless_veterans">Homeless Veterans</string>
    <string name="street_safety">Street Safety</string>
    <string name="mental_illness">Homelessness and Mental Illness</string>
    <string name="menu_home">How to Help</string>
    <string name="menu_visit">Interaction Log</string>
    <string name="menu_community">Community</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_button_sign_out">Sign Out</string>
    <string name="user_button_remove_account">Remove Account</string>
    <string name="user_button_sign_up">Sign Up</string>
    <string name="user_button_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="reenter_new_password">Re-enter New Password</string>
    <string name="company">Company/Organization (Optional)</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="default_web_client_id">223295299587-7mhp355dmib6ldbvhs8c58jpvs9ka7bq.apps.googleusercontent.com</string>
    <string name="error_login_failed">Authentication failed.</string>
    <string name="error_password_must_match">Passwords must match.</string>
    <string name="error_missing_required_data">Missing required information.</string>
    <string name="password_mismatch">Password and re-enter password are different.</string>
    <string name="error_failed_to_create_user">Failed to create account.  Try again later.</string>
    <string name="picture_of_people_helping">Picture of people helping.</string>
    <string name="error_date_required">Date*</string>
    <string name="error_time_required">Time*</string>
    <string name="error_date_time_required">Please select both date and time</string>
    <string name="error_title_required">Please enter a title</string>
    <string name="error_helpType_required">Please enter required support type</string>
    <string name="error_maxCapacity_required">Please enter total allowable participants</string>
    <string name="error_event_description_required">Please enter event description</string>
    <string name="error_email_valid">Enter a valid email</string>
    <string name="error_contact_valid">Enter a valid contact number</string>
    <string name="error_email_contact_valid">Please enter valid email and/or contact number</string>
    <string name="activity_title">Activities</string>
    <string name="turn_on_location">Please Turn On Location to see the Events near you.</string>
    <string name="where_was_your_visit">Where was your Interaction?</string>
    <string name="enter_date">Enter Date*</string>
    <string name="when_was_visit">When was your \nInteraction?</string>
    <string name="page_1_visit_content">Please fill out this (optional) form each time you go out. This help us build Street Care to bring more services to you and the community!</string>
    <string name="submit_here_button">Submit Here</string>
    <string name="next_button">Next</string>
    <string name="thank_you">Thank You</string>
    <string name="visit_log">INTERACTION LOG</string>
    <string name="thank_u_message">for taking the time to fill out the survey</string>
    <string name="return_home">Back to Interaction Log</string>
    <string name="another_visit"> Add Another Interaction</string>
    <string name="delete_acc">Delete Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="badges_earned">Badges Earned</string>
    <string name="my_events">My Events</string>
    <string name="completed">Completed</string>
    <string name="back_to_visit_log">Back to Visit Log</string>
    <string name="completed_with_exclamation">Thank you! Your \nInteraction has \nbeen logged.</string>
    <string name="share_with_community">Share with community</string>
    <string name="event_desc">Event Desc</string>
    <string name="event_location">Event Location</string>
    <string name="event_time">Event Time</string>
    <string name="event_date">Event Date</string>
    <string name="decline">Decline</string>
    <string name="approve">Approve</string>
    <string name="street_care_hub_leader_badge">Street Care Hub Leader Badge</string>
    <string name="street_care_hub_leader">Street Care Hub Leader</string>
    <string name="chapter_leader_badge">Chapter Leader Badge</string>
    <string name="chapter_leader">Chapter Leader</string>
    <string name="chapter_member_badge">Chapter Member Badge</string>
    <string name="chapter_member">Chapter Member</string>
    <string name="account_holder_badge">Account Holder Badge</string>
    <string name="account_holder">Account holder</string>
</resources>