<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    app:alignItems="center"
    app:flexDirection="row"
    app:flexWrap="wrap"
    app:justifyContent="flex_start">

    <!-- Chapter Leader Badge -->
    <TextView
        style="@style/BadgeTextViewStyle"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/chapter_leader_badge"
        android:text="@string/chapter_leader"
        app:drawableStartCompat="@drawable/ic_verified_green_fixed" />

    <!-- Street Care Hub Leader Badge -->
    <TextView
        style="@style/BadgeTextViewStyle"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/street_care_hub_leader_badge"
        android:text="@string/street_care_hub_leader"
        app:drawableStartCompat="@drawable/ic_verified_blue_fixed" />

    <!-- Chapter Member Badge -->
    <TextView
        style="@style/BadgeTextViewStyle"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/chapter_member_badge"
        android:text="@string/chapter_member"
        app:drawableStartCompat="@drawable/ic_verified_purple_fixed" />

    <!-- Account Holder Badge -->
    <TextView
        style="@style/BadgeTextViewStyle"
        android:layout_marginStart="2dp"
        android:contentDescription="@string/account_holder_badge"
        android:text="@string/account_holder"
        app:drawableStartCompat="@drawable/ic_verified_yellow_fixed" />

</com.google.android.flexbox.FlexboxLayout>