<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@animator/ic__x_how_to_help_selector"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_visit"
            android:icon="@animator/ic_visit_log_selector"
            android:title="@string/menu_visit" />

        <item
            android:id="@+id/nav_community"
            android:icon="@animator/ic_community_selector"
            android:title="@string/menu_community" />

        <item
            android:id="@+id/profile"
            android:icon="@animator/ic_profile_selector"
            android:title="@string/menu_profile" />
    </group>
</menu>