<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_marginRight="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Event Title"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/txtEventDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_desc"
        android:layout_marginStart="10dp"
        android:textSize="15dp"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/txtEventLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_location"
        android:layout_marginStart="10dp"
        android:textSize="15dp"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/txtEventTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_time"
        android:layout_marginStart="10dp"
        android:textSize="15dp"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/txtEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_date"
        android:layout_marginStart="10dp"
        android:textSize="15dp"
        android:layout_margin="5dp"/>
</LinearLayout>
 </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnDecline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/decline"/>
    <Button
        android:id="@+id/btnApproved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:text="@string/approve"/>

</LinearLayout>
</LinearLayout>