<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.visit.visit_forms.SurveySubmittedFragment"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_16dp"
    android:layout_gravity="center">
    <ImageView
        android:id="@+id/street_care_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/streetcare_logo"
        android:contentDescription="TODO" />


    <TextView
        android:id="@+id/thank_you"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank_you"
        android:textSize="@dimen/text_size32"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin_16dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/thank_you_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank_u_message"
        android:textSize="@dimen/text_size20"
        android:gravity="center_horizontal"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/btn_another_visit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/another_visit"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size20"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_return_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/margin_24dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/return_home"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size20"
        android:layout_marginBottom="@dimen/margin_bottom_72dp"/>

</LinearLayout>
</ScrollView>