<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/visit_log"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="Poppins"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_visitlog1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        app:cardCornerRadius="5dp"
        app:cardMaxElevation="5dp"
        app:cardUseCompatPadding="true"
        app:strokeColor="@color/gray700"
        app:strokeWidth="1.2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/thank_you"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thank_you"
                android:textSize="@dimen/text_size18"
                android:gravity="center"
                app:fontFamily="Poppins"
                android:layout_margin="@dimen/margin_10dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/thank_you_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/completed_with_exclamation"
                android:textSize="26sp"
                app:fontFamily="Poppins"
                android:layout_margin="@dimen/margin_16dp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:fontFamily="Poppins"
                android:layout_margin="2dp"
                android:text="@string/back_to_visit_log"/>

            <Button
                android:id="@+id/btn_Share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="15sp"
                app:fontFamily="Poppins"
                android:text="@string/share_with_community"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/simpleProgressBar"
        android:layout_width="300dp"
        android:layout_height="15dp"
        android:layout_marginTop="5dp"
        android:max="100"
        android:layout_gravity="center"
        android:progressDrawable="@drawable/custom_progressbar"
        android:progress="100"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
    <TextView
        android:id="@+id/txt_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="5sp"
        android:gravity="center"
        android:text="@string/completed"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:fontFamily="Poppins"/>

</LinearLayout>